--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Steder.csv">Steder.csv</a> – Palmstad, Sørstrand, Tropisk Lagune</li>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Relasjoner.csv">Relasjoner.csv</a> – Forbindelser mellom karakterer</li>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Bok.csv">Bok.csv</a> – Lange og korte oppsummeringer av tidligere RP</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Palmoya.md">Palmoya1.md</a> – Øyas historie, kultur, økonomi, idrett og høytider</li>
+    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Palmoya.md">Palmoya.md</a> – Øyas historie, kultur, økonomi, idrett og høytider</li>
   </ul>
   <p><a href="https://github.com/kmrodni-boop/palmoya-lore">Tilbake til GitHub-repo</a></p>
 </body>
