--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <ul>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Karakterer.csv">Karakterer.csv</a> – Full liste og beskrivelser av karakterer</li>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Tidslinje.csv">Tidslinje.csv</a> – Hendelser fra september 2025</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Steder.csv">Steder.csv</a> – Palmstad, Sørstrand, Tropisk Lagune</li>
+    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Steder.csv">Steder.csv</a> – Palmstad, Sørstrand, Tropisk Lagune, etc.</li>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Relasjoner.csv">Relasjoner.csv</a> – Forbindelser mellom karakterer</li>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Bok.csv">Bok.csv</a> – Lange og korte oppsummeringer av tidligere RP</li>
     <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Palmoya.md">Palmoya.md</a> – Øyas historie, kultur, økonomi, idrett og høytider</li>
