--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Palmøya Lore Arkiv</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
-    h1 { color: #228B22; } /* Tropisk grønn */
+    h1 { color: #228B22; }
     ul { list-style-type: none; padding: 0; }
     li { margin: 10px 0; }
     a { color: #0066cc; text-decoration: none; }
@@ -17,14 +17,13 @@
   <p>Velkommen til Palmøya-universet! Her finner du fulle datasett for karakterer, steder, tidslinjer og relasjoner i vårt tropiske rollespill.</p>
   <h2>Dokumenter</h2>
   <ul>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Karakterer.csv">Karakterer.csv</a> – Full liste og beskrivelser av karakterer</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Tidslinje.csv">Tidslinje.csv</a> – Hendelser fra september 2025</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Steder.csv">Steder.csv</a> – Palmstad, Sørstrand, Tropisk Lagune, etc.</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Relasjoner.csv">Relasjoner.csv</a> – Forbindelser mellom karakterer</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Bok.csv">Bok.csv</a> – Lange og korte oppsummeringer av tidligere RP</li>
-    <li><a href="https://github.com/kmrodni-boop/palmoya-lore/raw/main/Palmoya.md">Palmoya.md</a> – Øyas historie, kultur, økonomi, idrett og høytider</li>
+    <li><a href="/Karakterer.csv">Karakterer.csv</a> – Full liste og beskrivelser av karakterer</li>
+    <li><a href="/Tidslinje.csv">Tidslinje.csv</a> – Hendelser fra september 2025</li>
+    <li><a href="/Steder.csv">Steder.csv</a> – Palmstad, Sørstrand, Tropisk Lagune</li>
+    <li><a href="/Relasjoner.csv">Relasjoner.csv</a> – Forbindelser mellom karakterer</li>
+    <li><a href="/Bok.csv">Bok.csv</a> – Lange og korte oppsummeringer av tidligere RP</li>
+    <li><a href="/Palmoya.md">Palmoya.md</a> – Øyas historie, kultur, økonomi, idrett og høytider</li>
   </ul>
   <p><a href="https://github.com/kmrodni-boop/palmoya-lore">Tilbake til GitHub-repo</a></p>
 </body>
 </html>
- 
